fix: Retreive track list from current table only
